--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "scripts",
-  "version": "1.0.0",
-  "description": "",
-  "main": "test.js",
+  "name": "lsbam",
+  "version": "0.0.0",
+  "description": "Lightning Sheltering Behavior Assessment Model",
+  "main": "src/server.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node src/server.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Dallas",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.13.2",
