--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "src/server.js",
   "type": "module",
   "scripts": {
-    "start": "node src/server.js",
+    "start": "node sim/server.js",
+    "sim": "node requests/lsbam.js",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
